fix bug broken layout

--- a/css/style.css
+++ b/css/style.css
@@ -1589,7 +1589,7 @@ ul#list-car::-webkit-scrollbar-thumb {
 }
 ul#list-car li {
     float: left;
-    margin: 0 10px 5px
+    margin-right: 20px
 }
 .worker-table {
     width: 100%;
@@ -1671,9 +1671,8 @@ ul#list-car li {
 #schedule-wraper #schedule-date-left {
     display: block;
     width: 230px;
-    height: 50%;
+    height: 100%;
     float: left;
-    min-height: 540px
 }
 #schedule-wraper #schedule-date-left ul.list-date-btn {
     display: block;
@@ -1718,24 +1717,41 @@ body.mobi-layout #schedule-wraper .ui-loader-default{
     display: inline-table;
 }
 body.mobi-layout #schedule-wraper #schedule-date-left{
-    min-height:830px;
+    position: fixed;
     width:250px;
     background: #fff;
     transition: .5s;
-    float: left;
+    max-height: calc(100% - 102px)!important;
 }
 body.mobi-layout #schedule-worker-right {
     width: calc(100% - 250px);
     float: right;
 }
 body.mobi-layout #schedule-wraper.active{
-    width: 200%;
+    width: 100%;
+}
+body.mobi-layout #schedule-wraper #pageone{
+    position: absolute;
+    min-height: 100%!important;
+    top: 0px;
+    bottom: 0px;
+}
+.transition {
+  -webkit-transition: 3s;
+  -moz-transition: 3s;
+  -ms-transition: 3s;
+  -o-transition: 3s;
+  transition: 3s;
 }
 body.mobi-layout #schedule-wraper.active #schedule-date-left{
-    width: 50%;
+    width: calc(100% - 200px);
+    transition: .5s;
 }
 body.mobi-layout #schedule-wraper.active #schedule-worker-right{
-    width: 50%;
+    width: 100%;
+    display: none;
+    overflow: auto;
+    transition: .5s;
 }
 #schedule-worker-right button.close{
     position:absolute;
@@ -1757,7 +1773,7 @@ body.mobi-layout #schedule-wraper.active #schedule-worker-right{
 
 #schedule-date-left div.modal-body {
     padding: 0;
-    height: calc(100% + 55px);
+    height: calc(100% - 215px);
     overflow: hidden;
 }
 body.mobi-layout #schedule-date-left div.modal-body{
@@ -1791,7 +1807,6 @@ body.mobi-layout #schedule-date-left div.modal-body{
 }
 #schedule-date-left .modal-header {
     padding: 15px 0px 8px 0px;
-    margin-bottom: 12px;
     border: none;
 }
 #schedule-date-left .modal-header h4{
